--- a/Final_Project/src/userinterface/LabManagerRole/LabManagerWorkAreaJPanel.form
+++ b/Final_Project/src/userinterface/LabManagerRole/LabManagerWorkAreaJPanel.form
@@ -65,6 +65,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Manage User Account"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUserAccountActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnWorkQueue">
       <Properties>
