--- a/Final_Project/src/userinterface/StoreManagerRole/RequestFoodJPanel.form
+++ b/Final_Project/src/userinterface/StoreManagerRole/RequestFoodJPanel.form
@@ -207,7 +207,7 @@
     </Container>
     <Component class="javax.swing.JButton" name="btnRequestMO">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Request Main Office"/>
+        <Property name="text" type="java.lang.String" value="Request Inventory"/>
       </Properties>
     </Component>
   </SubComponents>
