--- a/Final_Project/src/userinterface/DriverRole/ProcessWorkRequestJPanel.form
+++ b/Final_Project/src/userinterface/DriverRole/ProcessWorkRequestJPanel.form
@@ -64,11 +64,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Submit Result"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSubmitResultActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnBack">
       <Properties>
         <Property name="text" type="java.lang.String" value="Back"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBackActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
