--- a/Final_Project/src/userinterface/StoreManagerRole/RequestFoodJPanel.form
+++ b/Final_Project/src/userinterface/StoreManagerRole/RequestFoodJPanel.form
@@ -209,6 +209,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Request Inventory"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRequestMOActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
