communication between inventory and lab done

--- a/Final_Project/src/userinterface/LabManagerRole/ManageWorkQueueJPanel.form
+++ b/Final_Project/src/userinterface/LabManagerRole/ManageWorkQueueJPanel.form
@@ -122,11 +122,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Back"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBackActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnProcess">
       <Properties>
         <Property name="text" type="java.lang.String" value="Process"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnProcessActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnRequest">
       <Properties>
